--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,7 @@ body {
   input[type='range'] {
     overflow: hidden;
     width: 80px;
-    -webkit-appearance: none;
+    appearance: none;
     background-color: white;
   }
   
