--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
   #results {
     z-index: 10;
     position:absolute;
-    transform: translate(0, 40.0vh);
+    transform: translate(0, 45.0vh);
     width:49vw;
     height: 58.5vh;
     overflow-y: auto;
@@ -19,8 +19,10 @@ body {
     padding-bottom: 1vh;
   }
   
-  #heatmap {
+  #map {
     width: 100%;
+    position: absolute;
+    top: 0;
   }
 
   .tracker svg {
@@ -58,11 +60,29 @@ body {
     font-size: calc(10px + 2vmin);
     color: rgb(17, 16, 16);
   }
+
+  #data {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0vh;
+    overflow-y: scroll;
+    max-width: 69vw;
+    max-height: 55vh;
+  }
+
+  table, th, td {
+    border-collapse: separate;
+    padding: 8px;
+    font-size: 1.5vw;
+    border-spacing: 0px 0;
+    border: 1px solid;
+  }
   
   #extras {
     position: absolute;
-    bottom:0;
-    left:0;
+    bottom: 0;
+    left: 0;
     height: 10%;
     width: 100vw;
     z-index: 12;
@@ -136,7 +156,7 @@ body {
     bottom: 0;
     right: 0;
     width:30vw;
-    height: 30vh;
+    height: 55vh;
     overflow-y:auto;
     padding-left: 1vw;
     padding-bottom: 1vh;
@@ -179,6 +199,14 @@ body {
   #results h6 {
     margin: 2.5%;
   }
+
+  #map {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    
+  }
   
   .App-header {
     background-color: #ffffff;
@@ -190,13 +218,31 @@ body {
     font-size: calc(10px + 2vmin);
     color: rgb(17, 16, 16);
   }
+
+  #data {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0vh;
+    overflow-y: scroll;
+    max-width: 69vw;
+    max-height: 55vh;
+  }
+
+  table, th, td {
+    border-collapse: separate;
+    padding: 8px;
+    font-size: .8vw;
+    border-spacing: 0px 0;
+    border: 1px solid;
+  }
   
   #extras {
     position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 40vw;
-    height: 10vh
+    right: 0;
+    bottom: 56vh;
+    max-width: 40vw;
+    max-height: 10vh
   }
   
   #controls {
@@ -229,13 +275,13 @@ body {
 
   #nav {
     display: block;
-    width: 40%;
+    width: 11.34vw;
     min-width: 100px;
   }
   
   label {
     display: block;
-    font-size:large;
+    font-size:xx-large;
     font-family:monospace;
   }
 
